--- a/index.html
+++ b/index.html
@@ -5,33 +5,39 @@
 <title>星空服&amp;云朵服--MC服务器生态圈</title>
 <style type="text/css">
 <!--
-.STYLE2 {font-family: "手写大象体"}
 .STYLE3 {
 	font-weight: bold;
-	font-family: "手写大象体";
+	font-family: "华文行楷";
 	color: #33FF99;
 }
-.STYLE5 {font-family: "手写大象体"; color: #FF3300; }
 .STYLE6 {
 	color: #33FF33;
 	font-weight: bold;
+	font-family: Arial, Helvetica, sans-serif;
 }
-.STYLE8 {font-family: "手写大象体"; color: #33FF66; }
-.STYLE13 {font-family: "手写大象体"; font-weight: bold; color: #0033CC; font-size: x-large; }
 .STYLE14 {
 	color: #990000;
-	font-family: SYSTEM;
+	font-family: "华文行楷";
 }
 .STYLE15 {
 	color: #009900;
-	font-family: "手写大象体";
+	font-family: "华文行楷";
 	font-size: x-large;
 }
-.STYLE17 {font-family: "手写大象体"; font-weight: bold; color: #003399; font-size: x-large; }
 body {
 	background-color: #F0F0F0;
 	background-image: url(abg.jpg);
 }
+.STYLE18 {font-family: "华文行楷"}
+.STYLE19 {color: #FF3300}
+.STYLE20 {
+	color: #33FF66;
+	font-family: Arial, Helvetica, sans-serif;
+}
+.STYLE21 {color: #003399; font-size: x-large; font-weight: bold;}
+.STYLE22 {color: #990000}
+.STYLE23 {color: #0033CC; font-size: x-large; font-weight: bold;}
+.STYLE24 {font-family: Arial, Helvetica, sans-serif}
 -->
 </style>
 </head>
@@ -40,33 +46,33 @@ body {
 <h1 class="STYLE3">星空服#5 &amp; 云朵服#2</h1>
 <table width="801" height="34" border="0" background="hbg.png">
   <tr>
-    <th width="67" scope="col"><span class="STYLE2">腐竹:</span></th>
-    <th width="67" scope="col"><span class="STYLE2">ParApollo368063</span></th>
-    <th width="67" scope="col"><span class="STYLE2">星空服5 IP </span></th>
-    <th width="67" scope="col"><span class="STYLE5">NONE</span></th>
-    <th width="67" scope="col"><span class="STYLE2">星空服5 端口</span></th>
-    <th width="67" scope="col"><span class="STYLE5">NONE</span></th>
-    <th width="67" scope="col"><span class="STYLE2">云朵服2 IP</span></th>
-    <th width="67" scope="col"><span class="STYLE6">hmfree.tooo.top</span></th>
-    <th width="67" scope="col"><span class="STYLE2">云朵服2 端口</span></th>
-    <th width="70" scope="col"><span class="STYLE8">20263</span></th>
+    <th width="67" class="STYLE18" scope="col">腐竹:</th>
+    <th width="67" class="STYLE18" scope="col">ParApollo368063</th>
+    <th width="67" class="STYLE18" scope="col">星空服5 IP </th>
+    <th width="67" class="STYLE18" scope="col"><span class="STYLE19">NONE</span></th>
+    <th width="67" class="STYLE18" scope="col">星空服5 端口</th>
+    <th width="67" class="STYLE18" scope="col"><span class="STYLE19">NONE</span></th>
+    <th width="67" class="STYLE18" scope="col">云朵服2 IP</th>
+    <th width="67" class="STYLE18" scope="col"><span class="STYLE6">hmfree.tooo.top</span></th>
+    <th width="67" class="STYLE18" scope="col">云朵服2 端口</th>
+    <th width="70" class="STYLE18" scope="col"><span class="STYLE20">20263</span></th>
   </tr>
 </table>
 <hr />
 <table width="801" height="105" border="0" background="sbg.png">
   <tr>
-    <td width="142" height="50"><span class="STYLE17">星空服</span></td>
-    <td width="164"><span class="STYLE14">状态:ERROR-NONE</span></td>
+    <td width="142" height="50" class="STYLE18"><span class="STYLE21">星空服</span></td>
+    <td width="164" class="STYLE18"><span class="STYLE22">状态:ERROR-NONE</span></td>
     <td width="159" class="STYLE14">版本:NONE</td>
-    <td width="308">&nbsp;</td>
+    <td width="308" class="STYLE18">&nbsp;</td>
   </tr>
   <tr>
-    <td height="47"><span class="STYLE13">云朵服</span></td>
-    <td class="STYLE15">状态:Runing</td>
+    <td height="47" class="STYLE18"><span class="STYLE23">云朵服</span></td>
+    <td class="STYLE15">状态:<span class="STYLE24">Runing</span></td>
     <td class="STYLE15">版本:BE1.21.70+</td>
-    <td>&nbsp;</td>
+    <td class="STYLE18">&nbsp;</td>
   </tr>
 </table>
-<p>&nbsp;</p>
+<p class="STYLE18">&nbsp;</p>
 </body>
 </html>
