--- a/index.html
+++ b/index.html
@@ -7,72 +7,66 @@
 <!--
 .STYLE3 {
 	font-weight: bold;
-	font-family: "华文行楷";
-	color: #33FF99;
-}
-.STYLE6 {
-	color: #33FF33;
-	font-weight: bold;
 	font-family: Arial, Helvetica, sans-serif;
+	color: #33FF99;
 }
 .STYLE14 {
 	color: #990000;
-	font-family: "华文行楷";
+	font-family: Arial, Helvetica, sans-serif;
 }
 .STYLE15 {
 	color: #009900;
-	font-family: "华文行楷";
+	font-family: Arial, Helvetica, sans-serif;
 	font-size: x-large;
 }
 body {
 	background-color: #F0F0F0;
 	background-image: url(abg.jpg);
 }
-.STYLE18 {font-family: "华文行楷"}
 .STYLE19 {color: #FF3300}
-.STYLE20 {
-	color: #33FF66;
-	font-family: Arial, Helvetica, sans-serif;
-}
 .STYLE21 {color: #003399; font-size: x-large; font-weight: bold;}
 .STYLE22 {color: #990000}
 .STYLE23 {color: #0033CC; font-size: x-large; font-weight: bold;}
-.STYLE24 {font-family: Arial, Helvetica, sans-serif}
+.STYLE26 {font-weight: bold; color: #33FF33;}
+.STYLE27 {color: #33FF66}
+.STYLE28 {font-family: Arial, Helvetica, sans-serif}
+.STYLE29 {color: #009900; font-family: Arial, Helvetica, sans-serif; font-size: large; }
+.STYLE31 {font-family: Arial, Helvetica, sans-serif; font-size: small; }
 -->
 </style>
 </head>
 
 <body>
 <h1 class="STYLE3">星空服#5 &amp; 云朵服#2</h1>
-<table width="801" height="34" border="0" background="hbg.png">
+<table width="801" height="42" border="0" background="hbg.png">
   <tr>
-    <th width="67" class="STYLE18" scope="col">腐竹:</th>
-    <th width="67" class="STYLE18" scope="col">ParApollo368063</th>
-    <th width="67" class="STYLE18" scope="col">星空服5 IP </th>
-    <th width="67" class="STYLE18" scope="col"><span class="STYLE19">NONE</span></th>
-    <th width="67" class="STYLE18" scope="col">星空服5 端口</th>
-    <th width="67" class="STYLE18" scope="col"><span class="STYLE19">NONE</span></th>
-    <th width="67" class="STYLE18" scope="col">云朵服2 IP</th>
-    <th width="67" class="STYLE18" scope="col"><span class="STYLE6">hmfree.tooo.top</span></th>
-    <th width="67" class="STYLE18" scope="col">云朵服2 端口</th>
-    <th width="70" class="STYLE18" scope="col"><span class="STYLE20">20263</span></th>
+    <th width="67" class="STYLE28" scope="col">腐竹:</th>
+    <th width="67" class="STYLE28" scope="col">ParApollo368063</th>
+    <th width="67" class="STYLE31" scope="col">星空服5 IP </th>
+    <th width="67" class="STYLE28" scope="col"><span class="STYLE19">NONE</span></th>
+    <th width="67" class="STYLE31" scope="col">星空服5端口</th>
+    <th width="67" class="STYLE28" scope="col"><span class="STYLE19">NONE</span></th>
+    <th width="67" class="STYLE31" scope="col">云朵服2 IP</th>
+    <th width="67" class="STYLE28" scope="col"><span class="STYLE26">hmfree.tooo.top</span></th>
+    <th width="67" class="STYLE31" scope="col">云朵服2 口</th>
+    <th width="70" class="STYLE28" scope="col"><span class="STYLE27">20263</span></th>
   </tr>
 </table>
 <hr />
-<table width="801" height="105" border="0" background="sbg.png">
+<table width="801" height="107" border="0" background="sbg.png">
   <tr>
-    <td width="142" height="50" class="STYLE18"><span class="STYLE21">星空服</span></td>
-    <td width="164" class="STYLE18"><span class="STYLE22">状态:ERROR-NONE</span></td>
+    <td width="142" height="50" class="STYLE28"><span class="STYLE21">星空服</span></td>
+    <td width="164" class="STYLE28"><span class="STYLE22">状态:ERROR-NONE</span></td>
     <td width="159" class="STYLE14">版本:NONE</td>
-    <td width="308" class="STYLE18">&nbsp;</td>
+    <td width="308" class="STYLE28">&nbsp;</td>
   </tr>
   <tr>
-    <td height="47" class="STYLE18"><span class="STYLE23">云朵服</span></td>
-    <td class="STYLE15">状态:<span class="STYLE24">Runing</span></td>
-    <td class="STYLE15">版本:BE1.21.70+</td>
-    <td class="STYLE18">&nbsp;</td>
+    <td height="47" class="STYLE28"><span class="STYLE23">云朵服</span></td>
+    <td class="STYLE15">状态:Runing</td>
+    <td class="STYLE29">版本:BE1.21.70+</td>
+    <td class="STYLE28">&nbsp;</td>
   </tr>
 </table>
-<p class="STYLE18">&nbsp;</p>
+<p class="STYLE28">&nbsp;</p>
 </body>
 </html>
